--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "director": "",
-    "cool-ascii-faces": "~1.3.x"
+    "director": ""
   },
   "engines": {
     "node": "0.10.x"
